Fix missing space in contact info

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -78,6 +78,7 @@
 
     .contact-info-container p, .nav-links li a, .modal-button {
         font-size: 1rem;
+        margin-right: 10px;
     }
 
     .experience-sub-title {
